# librefw

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  librefw.c  mod.c
include/: bogon.h  hooks.h  nl.h  nl_ops.h  state.h  utils.h
include/db/: manager.hpp
include/nl/: base.hpp  command.hpp  hcf.hpp  log.hpp
include/sql/: hcf_ipv4_history.h  hcf_ipv6_history.h
include/util/: nl.hpp  ptr.hpp
kernel/: .clangd  .gitignore  Makefile
kernel/include/: bogon.h  hcf.h  hcf_internal.h  hooks.h  log.h  nl.h  nl_ops.h  state.h
kernel/src/: bogon.c  hcf.c  hooks.c  log.c  mod.c  nl.c  state.c
scripts/: start-vm
sql/: schema.sql
src/: bogon.c  hooks.c  main.cpp  mod.c  nl.c  state.c  utils.c
src/db/: manager.cpp
src/nl/: base.cpp  command.cpp  hcf.cpp  log.cpp
src/util/: nl.cpp
